--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,14 @@ decorator==5.2.1
 defusedxml==0.7.1
 Django==4.2.20
 django-allauth==65.4.1
+gunicorn==23.0.0
 idna==3.10
 imageio==2.37.0
 imageio-ffmpeg==0.6.0
 moviepy==2.1.2
 numpy==2.0.2
 oauthlib==3.2.2
+packaging==25.0
 pillow==10.4.0
 proglog==0.1.11
 pycparser==2.22
